--- a/src/app/user/components/auth/register/register.component.html
+++ b/src/app/user/components/auth/register/register.component.html
@@ -58,6 +58,7 @@
         formControlName="dob"
         [max]="maxDate"
         [min]="minDate"
+        readonly
       />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
