--- a/src/app/shared/alert/alert.component.html
+++ b/src/app/shared/alert/alert.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <div
-  class="alert alert-box alert-sucess d-flex justify-content-between align-items-center"
+  class="alert alert-box alert-success d-flex justify-content-between align-items-center"
   *ngIf="isSuccess"
 >
   <p>{{ message }}</p>
