make header and sidebar position fixed

--- a/src/app/main-application/main-application.component.html
+++ b/src/app/main-application/main-application.component.html
@@ -6,7 +6,7 @@
     [username]="user.firstName"
   ></app-header>
 </mat-toolbar>
-<mat-sidenav-container class="h-100">
+<mat-sidenav-container>
   <mat-sidenav
     #sidenav
     role="navigation"
@@ -14,7 +14,7 @@
     opened="true"
     disableClose="true"
     [ngClass]="{ 'd-none': !isAuthenticated }"
-    class="bg-secondary"
+    class="bg-secondary position-fixed"
   >
     <app-sidebar (closeSidenav)="sidenav.close()"></app-sidebar>
   </mat-sidenav>
