--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -1,6 +1,4 @@
-<nav
-  class="navbar navbar-expand navbar-light bg-white topbar static-top shadow"
->
+<nav class="navbar navbar-expand navbar-light bg-white topbar fixed-top shadow">
   <h2 class="d-none d-sm-inline-block form-inline ml-md-3 text-primary">
     PATIENT DASHBOARD
   </h2>
