--- a/src/app/medication-and-allergies/components/medication-details/medication-details.component.html
+++ b/src/app/medication-and-allergies/components/medication-details/medication-details.component.html
@@ -38,7 +38,7 @@
                     font-weight-600
                   "
                 >
-                  Bhartesh
+                  {{ user.firstName }} {{ user.lastName }}
                 </h4>
               </div>
             </div>
