--- a/src/app/immunization-details/components/imm-details/imm-details.component.scss
+++ b/src/app/immunization-details/components/imm-details/imm-details.component.scss
@@ -20,6 +20,12 @@ mat-form-field {
     font-weight: bold;
   }
 }
+.message {
+  color: #18beb7;
+  text-align: center;
+  display: inherit;
+  font-size: 18px;
+}
 .number {
   color: #18beb7;
 }
