--- a/src/app/appointment/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/schedule-appointment.component.html
@@ -4,45 +4,63 @@
   </button>
 
   <h2 class="my-5 text-center">Your Appointments</h2>
-  <table
-    [ngClass]="{ 'd-none': !isData }"
-    mat-table
-    [dataSource]="appointments"
-    class="w-100"
-  >
-    <!-- Title Column -->
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Title</th>
-      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
-    </ng-container>
+  <div class="table-wrap">
+    <table
+      [ngClass]="{ 'd-none': !isData }"
+      mat-table
+      [dataSource]="appointments"
+    >
+      <!-- Title Column -->
+      <ng-container matColumnDef="title" sticky>
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.title | titlecase }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef>Date</th>
-      <td mat-cell *matCellDef="let element">{{ element.date | date }}</td>
-    </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let element">{{ element.date | date }}</td>
+      </ng-container>
 
-    <!-- provider Column -->
-    <ng-container matColumnDef="physician">
-      <th mat-header-cell *matHeaderCellDef>Physician</th>
-      <td mat-cell *matCellDef="let element">{{ element.physician }}</td>
-    </ng-container>
+      <!-- provider Column -->
+      <ng-container matColumnDef="physician">
+        <th mat-header-cell *matHeaderCellDef>Physician</th>
+        <td mat-cell *matCellDef="let element">{{ element.physician }}</td>
+      </ng-container>
 
-    <!-- slot Column -->
-    <ng-container matColumnDef="slot">
-      <th mat-header-cell *matHeaderCellDef>Slot</th>
-      <td mat-cell *matCellDef="let element">{{ element.slot }}</td>
-    </ng-container>
+      <!-- slot Column -->
+      <ng-container matColumnDef="slot">
+        <th mat-header-cell *matHeaderCellDef>Slot</th>
+        <td mat-cell *matCellDef="let element">{{ element.slot }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let element">
-        <button class="bg-transparent border-0" (click)="removeData(element)">
-          <mat-icon>delete_outline</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Staus</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-template *ngIf="element.staus; else not_booked">
+            Booked
+          </ng-template>
+          <ng-template #not_booked>
+            <div class="text-danger">Not Booked</div>
+            <button mat-raised-button color="accent" class="my-2">
+              Pay Now
+            </button>
+          </ng-template>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element">
+          <button class="bg-transparent border-0" (click)="removeData(element)">
+            <mat-icon>delete_outline</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </div>
