--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -1,15 +1,15 @@
 mat-sidenav {
-  &::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 12px; /* width of the entire scrollbar */
   }
 
-  &::-webkit-scrollbar-track {
-    background: #c1c1c1; /* color of the tracking area */
+  ::-webkit-scrollbar-track {
+    background: #eee; /* color of the tracking area */
   }
 
-  &::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb {
     background-color: #c1c1c1;
-    border-radius: 20px;
-    border: 3px solid white;
+    border-radius: 10px;
+    border: 1px solid #bbb;
   }
 }
