--- a/src/app/billing/components/billing/billing.component.html
+++ b/src/app/billing/components/billing/billing.component.html
@@ -1,53 +1,34 @@
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a [routerLink]="['/dashboard/patient-dashboard']">Home</a>
-    </li>
-  </ol>
-</nav>
-
 <div class="container">
-  <form [formGroup]="form">
-    <mat-card-header class="bg-primary text-white mb-2 p-2 rounded"
-      ><h4>Billing</h4>
-    </mat-card-header>
-    <mat-card class="mb-2 px-lg-5">
-      <div class="row">
-        <div class="col">
-          <mat-card-header class="text-primary mb-2 py-1 rounded"
-            >Treatments</mat-card-header
-          >
-          <!-- <h4>mat-select</h4> -->
-          <mat-form-field appearance="fill">
-            <mat-select [formControl]="testControl" name="test">
-              <mat-option>Select Test</mat-option>
-              <mat-option *ngFor="let test of tests" [value]="test.value">
-                {{ test.viewValue }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="col">
-          <mat-card-header class="text-primary mb-2 py-1 rounded"
-            >Unit</mat-card-header
-          >
-        </div>
-        <div class="col">
-          <mat-card-header class="text-primary mb-2 py-1 rounded"
-            >Cost</mat-card-header
-          >
-        </div>
-        <div class="col">
-          <mat-card-header class="text-primary mb-2 py-1 rounded"
-            >Total</mat-card-header
-          >
-        </div>
-      </div>
-    </mat-card>
-    <mat-card>
-      <div>
-        <p>Selected: {{ testControl.value }}</p>
-      </div>
-    </mat-card>
-  </form>
+  <button mat-raised-button color="primary" (click)="goToPayment()">
+    Make Payment
+  </button>
+
+  <table mat-table class="w-100" [dataSource]="billingDetails">
+    <ng-container matColumnDef="billNo">
+      <th mat-header-cell *matHeaderCellDef scope="col">Bill No</th>
+      <td mat-cell *matCellDef="let element">{{ element.billNo }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef scope="col">Title</th>
+      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="physician">
+      <th mat-header-cell *matHeaderCellDef scope="col">Physician</th>
+      <td mat-cell *matCellDef="let element">{{ element.physician }}</td>
+    </ng-container>
+    <ng-container matColumnDef="billDate">
+      <th mat-header-cell *matHeaderCellDef scope="col">BillDate</th>
+      <td mat-cell *matCellDef="let element">{{ element.billDate }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="consultation">
+      <th mat-header-cell *matHeaderCellDef scope="col">Consultation</th>
+      <td mat-cell *matCellDef="let element">{{ element.consultation }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
