added static status for appointments to show booked or not booked

--- a/src/app/main-application/main-application.component.html
+++ b/src/app/main-application/main-application.component.html
@@ -21,7 +21,7 @@
   <mat-sidenav-content
     [ngStyle]="{ 'margin-left': isAuthenticated ? '250px' : '0' }"
   >
-    <main class="p-4">
+    <main class="p-md-4">
       <router-outlet></router-outlet>
     </main>
   </mat-sidenav-content>
