--- a/src/app/user/components/auth/login/login.component.html
+++ b/src/app/user/components/auth/login/login.component.html
@@ -2,7 +2,11 @@
 
 <section class="container my-5">
   <a [routerLink]="['/']" class="text-center d-block mb-4"
-    ><img src="../../../../../assets/images/pp-logo.jpg" alt="" />
+    ><img
+      class="mw-100"
+      src="../../../../../assets/images/pp-logo.jpg"
+      alt=""
+    />
   </a>
   <!-- <div class="alert alert-danger col-md-6 offset-md-3" *ngIf="error">
     <p>{{ error }}</p>
