--- a/src/app/appointment/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/schedule-appointment.component.html
@@ -3,7 +3,7 @@
     Book your appointment
   </button>
 
-  <h2 class="my-5 text-center">Your Appointments</h2>
+  <h2 class="my-5 text-center">Your Upcoming Appointments</h2>
   <div class="table-wrap">
     <table
       [ngClass]="{ 'd-none': !isData }"
@@ -38,14 +38,22 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Staus</th>
         <td mat-cell *matCellDef="let element">
-          <ng-template *ngIf="element.staus; else not_booked">
+          <div
+            *ngIf="element.status; else not_booked"
+            class="text-success font-weight-medium"
+          >
             Booked
-          </ng-template>
+          </div>
           <ng-template #not_booked>
-            <div class="text-danger">Not Booked</div>
-            <button mat-raised-button color="accent" class="my-2">
+            <div class="text-danger font-weight-medium">Not Booked</div>
+            <a
+              mat-raised-button
+              color="accent"
+              [routerLink]="['/billing']"
+              class="my-2"
+            >
               Pay Now
-            </button>
+            </a>
           </ng-template>
         </td>
       </ng-container>
@@ -62,5 +70,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+    <div class="text-center" *ngIf="!isData">No Appointments Here</div>
   </div>
 </div>
