--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -14,6 +14,7 @@ mat-form-field {
 
 .form-card {
   width: 500px;
+  max-width: 100%;
   text-align: center;
   padding: 3rem 15px 2rem;
   margin: 0 auto;
