--- a/src/app/medication-and-allergies/components/medication-history/medication-history.component.html
+++ b/src/app/medication-and-allergies/components/medication-history/medication-history.component.html
@@ -481,12 +481,12 @@
           </div> -->
       </div>
     </div>
-
     <section class="container my-5">
       <table class="table table-striped table-bordered table-hover">
         <thead class="bg-primary text-white">
           <tr>
-            <th scope="col">Medication</th>
+            <th *ngIf="user.role === 'Admin'" scope="col">Name</th>
+            <th style="width: 13%" scope="col">Medication</th>
             <th scope="col">OTC Medication</th>
             <th scope="col">Herbs</th>
             <th scope="col">Social Drug</th>
@@ -498,6 +498,9 @@
         </thead>
         <tbody>
           <tr *ngFor="let m of medicationDetails">
+            <td *ngIf="user.role == 'Admin'">
+              {{ m.pname }}
+            </td>
             <td>
               {{ m.currentmedication }}
             </td>
