remove extra fields

--- a/src/app/user/components/auth/login/login.component.html
+++ b/src/app/user/components/auth/login/login.component.html
@@ -70,13 +70,14 @@
 
     <button
       type="submit"
-      class="my-4"
+      class="mt-4"
       mat-raised-button
       color="primary"
       [disabled]="form.invalid"
     >
       Login
     </button>
+    <div class="text-center my-2">or</div>
     <a routerLink="/user/register">Create an Account </a>
   </form>
 </section>
