--- a/src/app/appointment/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/schedule-appointment.component.html
@@ -49,7 +49,7 @@
             <a
               mat-raised-button
               color="accent"
-              [routerLink]="['/billing']"
+              [routerLink]="['/billing/billform']"
               class="my-2"
             >
               Pay Now
