--- a/src/app/billing/components/billing/billing.component.html
+++ b/src/app/billing/components/billing/billing.component.html
@@ -1,57 +1,34 @@
-<div class="container" id="demo">
-  <!-- <button mat-raised-button color="primary" (click)="goToPayment()">
+<div class="container">
+  <button mat-raised-button color="primary" (click)="goToPayment()">
     Make Payment
-  </button> -->
-  <mat-card-header class="bg-primary text-white mb-2 p-2 rounded"
-    ><h4>Payment History</h4>
-  </mat-card-header>
+  </button>
+
   <table mat-table class="w-100" [dataSource]="billingDetails">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>Bill No</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <ng-container matColumnDef="billNo">
+      <th mat-header-cell *matHeaderCellDef scope="col">Bill No</th>
+      <td mat-cell *matCellDef="let element">{{ element.billNo }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="appointment">
-      <th mat-header-cell *matHeaderCellDef>Title</th>
-      <td mat-cell *matCellDef="let element">{{ element.appointment }}</td>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef scope="col">Title</th>
+      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
     </ng-container>
 
     <ng-container matColumnDef="physician">
-      <th mat-header-cell *matHeaderCellDef>Physician</th>
+      <th mat-header-cell *matHeaderCellDef scope="col">Physician</th>
       <td mat-cell *matCellDef="let element">{{ element.physician }}</td>
     </ng-container>
-    <ng-container matColumnDef="billingDate">
-      <th mat-header-cell *matHeaderCellDef>BillDate</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.billingDate | date: "MMM dd, yyyy" }}
-      </td>
+    <ng-container matColumnDef="billDate">
+      <th mat-header-cell *matHeaderCellDef scope="col">BillDate</th>
+      <td mat-cell *matCellDef="let element">{{ element.billDate }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="consultationFee">
-      <th mat-header-cell *matHeaderCellDef>Consultation</th>
-      <td mat-cell *matCellDef="let element">{{ element.consultationFee }}</td>
-    </ng-container>
-    <ng-container matColumnDef="paymentMethod">
-      <th mat-header-cell *matHeaderCellDef>Payment Method</th>
-      <td mat-cell *matCellDef="let element">{{ element.paymentMethod }}</td>
-    </ng-container>
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let element">Paid</td>
+    <ng-container matColumnDef="consultation">
+      <th mat-header-cell *matHeaderCellDef scope="col">Consultation</th>
+      <td mat-cell *matCellDef="let element">{{ element.consultation }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 </div>
-
-<button
-  printSectionId="demo"
-  type="button"
-  class="btn"
-  mat-raised-button
-  color="primary"
-  ngxPrint
->
-  Print
-</button>
