fixed role based access issue

--- a/src/app/main-application/main-application.component.html
+++ b/src/app/main-application/main-application.component.html
@@ -18,7 +18,10 @@
     [ngClass]="{ 'd-none': !isAuthenticated }"
     class="bg-secondary position-fixed"
   >
-    <app-sidebar (closeSidenav)="sidenav.close()"></app-sidebar>
+    <app-sidebar
+      (closeSidenav)="sidenav.close()"
+      *ngIf="isAuthenticated"
+    ></app-sidebar>
   </mat-sidenav>
   <mat-sidenav-content
     [ngStyle]="{ 'margin-left': isAuthenticated ? '250px' : '0' }"
