--- a/src/app/user/components/auth/register/register.component.html
+++ b/src/app/user/components/auth/register/register.component.html
@@ -126,6 +126,16 @@
           </mat-select>
         </mat-form-field>
       </div>
+      <div class="col-lg-12" *ngIf="f.role.value == 'Physician'">
+        <mat-form-field appearance="standard">
+          <mat-label>Profile</mat-label>
+          <mat-select formControlName="profile">
+            <mat-option *ngFor="let profile of profiles" [value]="profile">
+              {{ profile }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
       <div class="col-lg-12">
         <mat-form-field
           appearance="standard"
